frame/support/test/tests/pallet_ui/step_014.stderr
error: Invalid pallet struct: expect `Pallet<T>` or `Pallet<T, I>`
  --> $DIR/step_014.rs:10:7
   |
10 |     impl Foo {}
   |          ^^^

error: expected `Pallet`
  --> $DIR/step_014.rs:10:7
   |
10 |     impl Foo {}
   |          ^^^
